--- a/17-geostatistika2.Rmd
+++ b/17-geostatistika2.Rmd
@@ -10,43 +10,43 @@
 <!-- Tõmba Moodle'ist kiht *saaremaa_asustus.gpkg* ning ava see QGISis. Lisaks ava kihelkondade või omavalitsuste kiht.  *Processing -> Toolbox -> Join attributes by location (summary)*. Loeme kokku palju, igas kihelkonnas külasid on ning võib võtta ka esmamainimise min, max ja keskmise. Eelnevalt oleks kasulik valida välja ainult Saaremaa kihelkonnad ning teha neist eraldi kiht.  -->
 
 
-Geostatistika abil saame iseloomustada meid huvitavate muutujate ruumilist struktuuri ja ennustada nende väärtusi kohtades, kus meil vaatlusandmed puuduvad. 
-Selle rakenduslik pool on seotud nii keskkondlike/looduslike omaduste kui ka inimeste pool loodud kultuuriliste nähtustega. Geostatistika sai alguse kaevandamise valdkonnas ning seetõttu on sageli keskendutud füüsilisele looduskeskkonnale. Juhuslikkuse funktsiooni kaudu on võimalik aga arvesse võtta määramatust (*uncertainty*), mis on humanitaarias oluline, kuna sageli ei mõista me kõiki keerulisi protsesse, mille tulemusena on tekkinud nähtuste ruumilised jaotused.
+Geostatistika abil saame iseloomustada meid huvitavate muutujate ruumilist struktuuri ja ennustada nende väärtusi kohtades, kust meil vaatlusandmed puuduvad. 
+Selle rakenduslik pool on seotud nii keskkondlike/looduslike omaduste kui ka inimeste loodud kultuuriliste nähtustega. Geostatistika sai alguse kaevandamise valdkonnast ning seetõttu on sageli keskendutud füüsilisele looduskeskkonnale. Juhuslikkuse funktsiooni kaudu on võimalik aga arvesse võtta määramatust (*uncertainty*), mis on humanitaarias oluline, kuna sageli ei mõista me kõiki keerulisi protsesse, mille tulemusena on tekkinud nähtuste ruumilised jaotused.
 
 ## Ruumiskaala (ulatus) ja -struktuur
 
-Enamik geograafilisi omadusi on ruumiliselt sõltuvad - lähemal olevad asjad on omavahel rohkem sarnased kui üksteisest kaugel olevad asjad (Tobleri seadus). Hea näide on siinkohal maapinna kõrgus. Madala koha ümbruses on tõenäoliselt ka madal. Esineb küll erandeid nagu näiteks klindiservad jms. Ruumilise sõltuvuse ulatust (kui kaugel üksteisest olevad nähtused on omavahel sarnased) saab mõõta ja see annab võimaluse teha kokkuvõtteid nähtuste jaotumise kohta ruumis. Maapinna kõrgusandmete puhul on mägises piirkonnas ruumiline variatsioon on lühikese ulatusega (või kõrge sagedusega), kuna kõrgusväärtused võivad väikesel alal suures ulatuses muutuda. Tasandikul on kõrgusandmete variatsioon aga pika ulatusega või pikamaaline (long range või madala sagedusega), kuna kõrgus on suhteliselt sarnane suurtel aladel. 
+Enamik geograafilisi omadusi on ruumiliselt sõltuvad - lähemal olevad asjad on omavahel rohkem sarnased kui üksteisest kaugel olevad asjad (Tobleri seadus). Hea näide on siinkohal maapinna kõrgus. Madala koha ümbruses on tõenäoliselt ka madal. Esineb küll erandeid nagu näiteks klindiservad jms. Ruumilise sõltuvuse ulatust (kui kaugel üksteisest olevad nähtused on omavahel sarnased) saab mõõta ja see annab võimaluse teha kokkuvõtteid nähtuste jaotumise kohta ruumis. Maapinna kõrgusandmete puhul on mägises piirkonnas ruumiline variatsioon lühikese ulatusega (või kõrge sagedusega), kuna kõrgusväärtused võivad väikesel alal suures ulatuses muutuda. Tasandikul on kõrgusandmete variatsioon aga pika ulatusega või pikamaaline (*long range* või madala sagedusega), kuna kõrgus on suhteliselt sarnane suurtel aladel. 
 
-Geostatistika aluseks on piirkondlike muutujate teooria. Ruumiline variatsioon koosneb kahest osast: deterministlik komponent, mis esindab järkjärgulist muutust uurimispiirknnas ja stohhastiline või suvaline komponent, mis esindab määramatust. Meile näiv suvaline varieeruvus võib olla paljude faktoride koosmõjul tekkinud ning seda ei pruugi olla võimalik otseselt mudeldada.
+Geostatistika aluseks on piirkondlike muutujate teooria. Ruumiline variatsioon koosneb kahest osast: deterministlik komponent, mis esindab järkjärgulist muutust uurimispiirkonnas, ja stohhastiline või suvaline komponent, mis esindab määramatust. Meile näiv suvaline varieeruvus võib olla paljude faktorite koosmõjul tekkinud ning seda ei pruugi olla võimalik otseselt mudeldada.
 
 
 
 ## Klasterdamine
 
-K-means klasterdamine on meetod, mille abil jagatakse väärtused (punktid) erinevateks gruppideks ehk klastriteks. Klastritesse jaotumine sõltub sellest, millise klastri keskpunktile vastav punkt kõige lähemal on. 
+K-keskmiste (*K-means*) klasterdamine on meetod, mille abil jagatakse väärtused (punktid) erinevateks gruppideks ehk klastriteks. Klastritesse jaotumine sõltub sellest, millise klastri keskpunktile vastav punkt kõige lähemal on. 
 
-Proovime selle läbi. Jaga Saaremaa külad sama paljudeks klastriteks, kui on Saaremaal kihelkondi. *Processing -> Toolbox -> K-means clustering* Vaata, kas lihtsalt distantsi põhine külade jaotamine gruppidesse kattub kihelkondadega. Sama võiks teha näiteks taludega ja võrrelda küladesse jaotumist. Erinevuste võrdlemiseks saaks nt teha klastritest alad ning lahutada need kihelkondadest, et välja tuua alad, mis nende vahel erinevad. 
+Proovime selle läbi. Jaga Saaremaa külad sama paljudeks klastriteks, kui on Saaremaal kihelkondi. *Processing -> Toolbox -> K-means clustering* Vaata, kas lihtsalt distantsipõhine külade jaotamine gruppidesse kattub kihelkondadega. Sama võiks teha näiteks taludega ja võrrelda küladesse jaotumist. Erinevuste võrdlemiseks saaks nt teha klastritest alad ning lahutada need kihelkondadest, et välja tuua alad, mis nende vahel erinevad. 
 
 
-```{r 18kalster, echo =F, fig.align='center', fig.show='hold', fig.cap = "Saaremaa külade jaotumine klastriteks.", out.width="100%"}
+```{r 18kalster, echo =F, fig.align='center', fig.show='hold', fig.cap = "Saaremaa külade jaotumine klastriteks.", out.width="80%"}
 knitr::include_graphics(here::here("imgs/18_klaster_saaremaa.PNG"))
 ```
 
 ## Interpoleerimine
 
-Selleks, et hinnata mingi nähtuse väärtust kohas, kust meil (valimis) andmeid ei ole, tuleb kasutada interpoleerimist, mis põhineb nn ennustamise funktsioonil (*prediction*). Sageli kasutatakse interpoleerimist selleks, et luua pidev rastermudel mingist eraldiseisvate punktide hulgast. Interpoleerimiseks on erinevaid meetodeid ning õige valik võib olla kohati suhteliselt keeruline. Eelkõige oleneb andmete iseloomust ja ulatusest ning nähtusest, millest üritame miskit rohkem mõista. Tulemus võib samuti meetodist olenevalt suuresti erineda.
+Selleks, et hinnata mingi nähtuse väärtust kohas, kust meil (valimis) andmeid ei ole, tuleb kasutada interpoleerimist, mis põhineb nn ennustamise funktsioonil (*prediction*). Sageli kasutatakse interpoleerimist selleks, et luua pidev rastermudel mingist eraldiseisvate punktide hulgast. Interpoleerimiseks on erinevaid meetodeid ning õige valiku tegemine võib olla kohati suhteliselt keeruline. Eelkõige oleneb see andmete iseloomust ja ulatusest ning nähtusest, mida üritame mõista. Tulemus võib samuti meetodist olenevalt suuresti erineda.
 
 Sisuliselt on interpoleerimine ennustav mudeldamine väärtuste hindamiseks mõõtmiskohtade vahel. Teistest meetoditest, nagu näiteks eelmisel korral vaadatud KDE, erinebki see just sellepoolest, et interpoleerimine mitte ei iseloomusta mingi andmestiku, vaid pigem ennustab selle põhjal. KDE võtab mingi nähtuse esinemissageduse ning muudab selle tiheduseks, aga ei ennusta tihedust punktide vahel, vaid ainult iseloomustab seda. Kuna interpoleerimine aga ennnustab, siis on tegu ka keerukama meetodiga. 
 
 ### Distantsi kaaluv interpoleerimine
 
-Lineaarne distantsipõhine meetod meetod on suhteliselt lihtne, nagu allolevalt jooniselt näha. 
+Lineaarne distantsipõhine meetod on suhteliselt lihtne, nagu allolevalt jooniselt näha. 
 
 ```{r 18simpleinterpolation, echo =F, fig.align='center', fig.show='hold', fig.cap = "Lihtsad interpoleerimise näited. A - kahe punkti ja lineaarse interpoleerimisega D = 15. B - lisades kolmanda punkt ja interpoleerides IDW abil D = 12.5 [@Gillings2020, fig 7.1].", out.width="100%"}
 knitr::include_graphics(here::here("imgs/18_simple_interpolation.PNG"))
 ```
 
-Populaarne distantsipõhine meetod on IDW ehk inverse distance weighing. Selle puhul nn kaalutakse punkte vastavalt nende üksteise vahelise distantsi ruudule. Niimoodi kahaneb oluliselt kaugemate punktide mõju lähedal olevatele punktidele. Vaatame korraks ka IDW valemit, et meetodit paremini mõista. 
+Populaarne distantsipõhine meetod on IDW ehk *inverse distance weighting*. Selle puhul kaalutakse punkte vastavalt nendevahelise kauguse ruudule. Niimoodi kahaneb oluliselt kaugemate punktide mõju lähedal olevatele punktidele. Vaatame korraks ka IDW valemit, et meetodit paremini mõista. 
 
 ```{r 18idwformula, echo =F, fig.align='center', fig.show='hold', fig.cap = "IDW meetodi valem.", out.width="25%"}
 knitr::include_graphics(here::here("imgs/18_idw_formula.PNG"))
@@ -69,15 +69,15 @@ knitr::include_graphics(here::here("imgs/18_spline.PNG"))
 
 ### Ülesanne
 
-Interpoleeri erinevate meetoditega *ei_ole_pole_props* kihi põhjal *ei_ole* või *pole* jaotumine terves Eestis. Kuna andmestikus on info kihelkondadena, siis kõige pealt tuleb see siduda kihelkondade kihiga *Joins* funktsiooniga. Kuna interpoleerimiseks vajame aga punkte, siis tuleb teha kihelkondadest, kus proportsioonide andmed on olemas. Selleks vali õige kihelkonnad avaldisega *"ei_ole" IS NOT NULL*. Tee kihelkondadest keskpunkt. *Vector -> Geometry tools -> Centroids*. Otsi *Processing Toolbox*'ist interpoleerimismeetodeid (IDW, Spline, TIN). Interpoleeri erinevate meetoditega ning lõika need kihelkondade piiridesse ja värvi sama skaalaga. Võrdle erinevusi 
+Interpoleeri erinevate meetoditega *ei_ole_pole_props* kihi põhjal *ei_ole* või *pole* jaotumine terves Eestis. Kuna andmestikus on info kihelkondadena, siis kõige pealt tuleb see siduda kihelkondade kihiga *Joins* funktsiooniga. Kuna interpoleerimiseks vajame aga punkte, siis tuleb need leida kihelkondadest, kus proportsioonide andmed on olemas. Selleks vali õiged kihelkonnad avaldisega *"ei_ole" IS NOT NULL*. Leia kihelkondade keskpunktid: *Vector -> Geometry tools -> Centroids*. Otsi *Processing Toolbox*'ist interpoleerimismeetodeid (IDW, Spline, TIN). Interpoleeri erinevate meetoditega ning lõika saadud rastrid kihelkondade piiridesse ja värvi sama skaalaga. Võrdle erinevusi. 
 
-```{r 18splineeiole, echo =F, fig.align='center', fig.show='hold', fig.cap = "Thin plate spline meetodiga arvutatud raster 'ei ole' proportsioonidest", out.width="100%"}
+```{r 18splineeiole, echo =F, fig.align='center', fig.show='hold', fig.cap = "Thin plate spline meetodiga arvutatud raster 'ei ole' proportsioonidest", out.width="80%"}
 knitr::include_graphics(here::here("imgs/18_spline_eiole.PNG"))
 ```
 
 Vaatame ka rasterite profiile, et nendest parem ettekujutus saada. *Plugins* -> *Profile tool*.
 
-Erinevuste paremaks võrdlemiseks saab kihid ka üksteisest lahutada. Kasuta selleks *Raster -> Raster calculator*. Värvi tulemused keskmisest kõrvale kaldega ning vali selleks sobiv skaala.  
+Erinevuste paremaks võrdlemiseks saab kihid ka üksteisest lahutada. Kasuta selleks *Raster -> Raster calculator*. Värvi tulemused keskmisest kõrvale kaldumise põhjal ning vali selleks sobiv skaala.  
 
 
 <!-- ### Idee ülesandeks -->
