--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -228,3 +228,9 @@ year = {2017},
 volume = {11},
 number = {1}
 }
+@book{Gillings2020,
+author = {Gillings, E Mark and Hacıg{\"{u}}zeller, Piraye and Lock, Gary},
+isbn = {9780815373230},
+title = {{Archaeological Spatial Analysis : A Methodological Guide Archaeology and spatial analysis}},
+year = {2020}
+}
