--- a/19-veebirakendused_veebimajutus_2.Rmd
+++ b/19-veebirakendused_veebimajutus_2.Rmd
@@ -1,48 +1,56 @@
 # Veebirakendused, veebimajutus 2 {#veebirakendused2}
 
-Animatsioon
+Eelmisel korral vaatasime, kuidas `qgis2web` plugina abil hõlpsalt oma QGISis tehtud kaardikihte veebikaardina jagada.
 
-Esmalt vaja date-tüüpi tunnust
-to_date(concat(year, '-01-01'))
+Sel korral vaatame esmalt, 
 
-View -> Decorations -> Title Label
-
-Animatsioonina, gifina
-
-Slideriga
+- mis võimalusi on QGISis ajalise dimensiooni kaasamiseks (nt mingite muutuste kuvamiseks),  
+- kuidas ajadimensiooni võrdlemisi lihtsalt Mapbox GL JSi API abil veebirakenduses kuvada.   
 
 
+Kasutame sel korral [Eesti filmi andmebaasist](https://www.efis.ee/) kogutud andmeid selle kohta, milliseid geograafilisi kohti läbi aegade Eesti filmides näha on olnud. Selleks on andmebaasis lisaks tavalistele märksõnadele märgendatud eraldi ka [kohanimed](https://www.efis.ee/et/marksonad/id/13/view/Detailed/page/1). Selle kursuse tarbeks korjasime need R-i skriptiga kokku ning kokku vähemalt 5 korda esinenud kohanimede koordinaatidega sidumiseks kasutasime [Maa-ameti geokodeerimise teenust](https://inaadress.maaamet.ee/geocoder/bulk). 
 
-## Mapbox GL JS
+Kohad, millele teenuses mingid koordinaadid määrati, oleme üle vaadanud ning enam-vähem õigesse kohta liigutanud. Kohtadele, mis koordinaate ei saanud, ei ole neid ka eraldi lisatud.  
 
-Minimaalne JavaScripti kood, mida veebikaardi näitamiseks vaja läheb, on
-
-mapboxgl.accessToken = '<your access token here>'; // juurdepääsuluba
-const map = new mapboxgl.Map({ // tee uus kaardiobjekt
-    container: 'map', // kaardi ID
-    style: 'mapbox://styles/mapbox/streets-v11', // stiili veebiaadress
-    center: [-74.5, 40], // kaardi lähtekoordinaadid [lng, lat]
-    zoom: 9 // kaardi sissesuumimise lähtepositsioon
-});
+Laadime saadud andmestiku **efis_parandatud.gpkg** QGISi. Valime *WebMapServices* kaudu ka mingi sobiva aluskaardi.  
 
 
-Juurdepääsuluba on vaja kõikide Mapboxi APIde kasutamiseks. Enda juurdepääsuload leiad [siit](https://account.mapbox.com/access-tokens/).
-Mapboxi juurdepääsuluba võib välja näha näiteks umbes selline: 
+## Ajatelje kasutamine QGISis
 
-Stiili võid teha Mapbox Studios ise (nagu tegime nt Storymaps praktikumis) või laadida [olemasolevate stiilide](https://docs.mapbox.com/api/maps/styles/) seast. 
+- Filtreerime andmestikust kõigepealt välja ainult need read, kus aastaarvud on olemas.  
+- Kuna Eesti kohta on info oluliselt detailsem kui välismaa kohta, piirame oma veebikaardi samuti ainult Eesti ala. Kasutame selleks *freehand selection*'i tööriista, et tõmmata ümber Eesti ala piiri, mille seest punkte valida.  
+- Salvestame tehtud valiku eraldi kihina. Nimetame selle nt nimega **efis_eesti.gpkg**.  
+- Eemaldame punktidelt äärejooned, valime punktidele värvid, teeme need läbipaistvamaks ning määrame punktide suuruse vastavalt sellele, kui palju mingit kohta mingil aastal filmides näidatud oli (tulp *n*).  
+- Kuna aastaarvu sisaldav tulp on hetkel andmestikus tekstikujul ja sisaldab ka ajavahemikke (nt *1940-1941*), tekitame andmestikku kaks uut tulpa:  
+  + esmalt teeme uue tulba nimega *aasta1*, kus oleks arvu kujul ainult 4 esimest numbrit *aasta* tulbast: `to_int(left("aasta", 4))`.  
+  + seejärel teeme QGISi jaoks eraldi kuupäeva tulba nimega *kuupaev*, mida on vaja animeerimiseks: `to_date("aasta1", 'yyyy')`.  
 
-Kasutame Mapboxi aluskaart ja paneme sinna asustusüksuste andmed
-https://studio.mapbox.com/
-Datasets -> New Dataset
 
-geojson EPSG 4326
-delete crs in geojson file
+Teeme nüüd *efis_eesti* kihil paremkliki ning valime *Properties*. Vasakult menüüst valime *Temporal* ja teeme linnukese valiku ette *Dynamic Temporal Control*.   
+Kuna meil on andmestikus nüüd kuupäeva tulp, saame valida konfiguratsiooniks väärtuse *Single Field with Date/Time* ning *Field* väärtuseks loodud tulba *kuupaev*. Vajutame *OK*.  
 
-Teeme lihtsa rakenduse, kus kasutaja saab liuguri abil vaadata eri perioodide andmeid ning punktidel klikkides näha atribuuttabeli infot. Kasutame sedapuhku Mapbox GL JS teeki.
+Valime järgmiseks menüüst kella pildiga tööriista **_Temporal Controller Panel_**.
+Avanenud menüüs vajutame nupule *Animated temporal navigation*. *Animation range*'i saame määrata värskendamise ikooni juurest: *Set to Full Range*. Ajatelje "sammuks" määrame 1 aasta.  
 
-Nagu eelmisel korral räägitud, kasutavad veebirakendused vähemalt kolme elementi: HTMLi, mis annab leheküljele struktuuri, CSSi, mis annab leheküljele kujunduse, ja JavaScripti, mis annab lehele interaktiivsuse.
+Vajuta animatsiooni mängimise nupule ning peaksid nägema, kuidas kaardile ilmuvad igal aasta filmidega seotud olnud kohad ning nende ikoonide suurus vastab sellele, kui mitme filmiga need sel aastal seotud olid.
+Võime kuvada kaardil ka aastaarvu, et oleks lihtsam jälgida: *View* -> *Decorations* -> *Title Label*.  Tee linnuke valiku ette *Enable Title Label*, vali *Insert or Edit an Expression* ja trüki avaldise kasti `format_date(@map_start_time, 'yyyy')`.
 
-## HTML
+QGIS ei lase animatsiooni gif-ina salvestada, vaid kõik 100 pilti (aastatest 1921-2021) salvestatakse eraldi pildifailidena ning neid tuleb eraldi animeerida mõnes teises programmis, nt [Ezgifi](https://ezgif.com/maker) veebipõhises programmis.
+
+Selline gif on aga põhimõtteliselt lihtsalt liikuv pilt ning kasutajal ei ole võimalik andmeid kuidagi oma soovidele vastavalt põhjalikumalt uurida.
+
+
+## Ajadimensioon Mapbox GL JS APIs
+
+Mapboxi JavaScripti API sisaldab hulka funktsioone, mille abil on võimalik veebilehel või veebirakenduses näidata interaktiivseid veebikaarte ning näidata andmeid vastavalt kasutaja tegevusele ja valikutele.  
+
+Teeme lihtsa rakenduse, kus kasutaja saab liuguri abil vaadata eri aastate andmeid. Nagu eelmisel korral räägitud, kasutavad veebirakendused vähemalt kolme elementi: HTMLi, mis annab leheküljele struktuuri, CSSi, mis annab leheküljele kujunduse, ja JavaScripti, mis annab lehele interaktiivsuse.
+
+Salvestame `efis_eesti` geojsoni failina ja `EPSG: 4326` projektsioonis. Ühtlasi eemaldame salvestamisel ebavajalikud tulbad, mis nt geokodeerimisega kaasa tulid.  
+Avame geojsoni faili mingis tekstiredaktoris (nt Notepad või Notepad++) ning kustutame failist ära rea, mis algab `crs": { "type": "name", "properties":` ja salvestame.  
+
+
+### HTML
 
 Kõigepealt teeme valmis lihtsa HTML-i struktuuri, kus oleks päis ja keha ning kus kehas oleksid olemas meie lehekülje struktuurielemendid:  
 
@@ -53,14 +61,15 @@ Kõigepealt teeme valmis lihtsa HTML-i struktuuri, kus oleks päis ja keha ning 
 ```
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <div id="kaart"></div>
-        <div id="kirjeldus">
-            <div id="liugur"></div>
-        </div>
-    </body>
+	<head>
+	</head>
+	<body>
+		<div id = "kaart"></div>
+		<div id = "kirjeldus">
+			<div>
+			</div>
+		</div>
+	</body>
 </html>
 ```
 
@@ -68,33 +77,34 @@ Kõigepealt teeme valmis lihtsa HTML-i struktuuri, kus oleks päis ja keha ning 
 Päisesse peab Mapboxi APIt kasutades minema üsna kindel info. Seega kopeerime `<head></head>` märgendite vahele alloleva koodi:
 
 ```
-        <meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>Tartumaa asustusüksuste mainimine</title>
-		<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js"></script>
-		<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css" rel="stylesheet"/>
+		<meta charset = "utf-8"/>
+		<meta name='viewport' content='width=device-width, initial-scale=1' />
+		<title>Kohad Eesti filmides</title>
+		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js'></script>
+		<link href='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css' rel='stylesheet' />
 ```
 
-Samuti saame kohe ära määrata, mida tahame näidata kirjeldava tekstina. Lisame kirjelduse `<div>`-märgendite vahele, enne liuguri jaotist kirjelduse pealkirja ja info andmete päritolu kohta:
+Samuti saame kohe ära määrata, mida tahame kehaosas `<body>` ja `</body>` märgendite vahel näidata kirjeldava tekstina. Lisame kirjelduse `<div>`-märgendite vahele, enne liuguri jaotist kirjelduse pealkirja ja info andmete päritolu kohta:
 
 ```
-            <h1>Tartumaa asustusüksuste esmamainimine</h1>
-            <p>Andmed: Andrese käest</p>
+			<h1>Eesti filmidega seotud kohad aastatel 1921-2021</h1>
+			<p>Andmed: efis.ee</p>
+				
 ```
 
-Lõpuks saame veel määrata, mis toimub liuguri jaotises `<div id = "liugur">` ja `</div>` märgendite vahel. Lisame sinna aastaarvu, mis vastavalt kasutaja valikule muutuma hakkab, ning liuguri enda. Liugurile anname ka eraldi ID ja klassi, mille kaudu sellele CSSis ja JavaScriptiga viidata saame.
+Lõpuks saame veel määrata, mis toimub liuguri jaotises. Lisame sinna aastaarvu, mis vastavalt kasutaja valikule muutuma hakkab, ning liuguri enda. Liugurile anname ka eraldi ID ja klassi, mille kaudu sellele CSSis ja JavaScriptiga viidata saame.
 
 ```
-                <h2>Aasta: <label id="aastaarv">2021</label></h2>
-				<input id="slider" class="slider" type="range" min="1200" max="2021" value="2021"/>
+        <h2>Aasta: <label id="parasjagu_aasta">1921</label></h2>
+				<input id="liugur" class="slider" type="range" min="1921" max="2021" value="1921" />
 ```
 
-## CSS
+### CSS
 
-Järgmiseks võiksime panna paika CSSi. Selle võib ära kirjeldada eraldi css-laiendiga failis või HTML-i struktuuris `<style></style>` märgendite vahel. Lisame päise lõppu niisiis veel info elementide kujunduse ja paigutuse kohta.
+Järgmiseks võiksime panna paika CSSi. Selle võib ära kirjeldada eraldi css-laiendiga failis või HTML-i struktuuris `<style></style>` märgendite vahel. Lisame päise lõppu, enne `</head>` märgendit niisiis veel info elementide kujunduse ja paigutuse kohta.
 
 ```
-        <style>
+		<style>
 			body { 
 				margin: 0; 
 				padding: 0; 
@@ -119,49 +129,194 @@ Järgmiseks võiksime panna paika CSSi. Selle võib ära kirjeldada eraldi css-l
 		</style>
 ```
 
-## JavaScript
+
+### JavaScript
+
+Nüüd liigume [MapBox Studiosse](https://studio.mapbox.com/). Oma veebirakenduses kasutame nii Mapboxis stiliseeritud aluskaarti kui ka Mapboxi *tileset*idesse laaditud Eesti filmi andmebaasi geojsoni andmeid.  
+
+Esmalt stiliseerime kiiresti mingi kaardipõhja, mida oma rakenduses kasutada: *Styles* -> *New style*. Teeme valmis stiili avalikuks: *Share* -> *Allow copying* -> *Make public*.    
+
+Järgmiseks laadime Mapboxi üles oma *efis_eesti.geojson* faili, kust on CRS-rida ära kustutatud: *Datasets* -> *New Dataset* -> *Upload*. Kui andmestik on *dataset*'ina üles laaditud, siis ekspordime selle omakorda *tileset*'iks: *Export to tileset*. Tee ka *tileset* avalikuks (*Make public*).      
+
+
+Nüüd lisame oma HTML-faili `<body>`-jaotisesse uue jaotise `<script></script>` märgendite vahele. Siia tuleb nüüd JavaScripti osa, mis kasutab Mapboxi APIt. Kõik, mis on pärast märke `//`, on kommentaar, mis koodi kirjeldab, ent ei tee ise midagi.  
+
+Minimaalselt on vaja kaardi tegemiseks allolevat koodi. See näitab HTML-failis meie stiliseeritud aluskaarti, ära tuleks vahetada ainult juurdepääsuluba ja kaardistiili aadress, mille saab MapBox Studios enda loodud stiili juurest vastavalt *Share* -> *Developer resources* -> *Web* -> *Access token* ja *Share* -> *Developer resources* -> *Web* -> *Style URL*.  
 
 ```
-<script>
-			mapboxgl.accessToken = 'pk.eyJ1IjoibXBpbHZpayIsImEiOiJja2Z2Y3Vkd2wyM2ptMnlwYTM5d2Z3YWIyIn0.VyX0FTIDrsLZwotmaYmX-Q';
+		<script>
+			// aluskaart
+			mapboxgl.accessToken = 'pk.sinukaardistiilijuurdepääsuluba'; // kaardistiili juurdepääsuluba
 
 			const map = new mapboxgl.Map({
-			  container: 'map', 
-			  style: 'mapbox://styles/mpilvik/ckwge5mhu15fs14nsfcmjstsv',				  center: [25.89, 58.64],
-			  zoom: 7
+			  container: 'kaart', // millises html-i jaotises kaarti hoida?
+			  style: 'mapbox://styles/sinukasutaja/stiiliaadress', // mapboxi kaardistiili aadress
+			  center: [24.89, 58.64], // aluskaardi keskpunkti koordinaadid
+			  zoom: 6.5 // sissesuumimise tase
 			});
-				
+		</script>
+			
+```
+
+Järgmiseks võiksime lisada kaardile ka MapBoxi laaditud filmikohtade *tileset*'i punktid. Selleks lisame `<script>`-märgendite vahele alloleva koodi, mis pärast aluskaardi laadimist määrab ära meie punktiandmete allika Mapboxis ning seejärel lisab sealt allikast punktid veebirakenduse aluskaardile. Sedapuhku tuleb koodis asendada nüüd avalikuks tehtud *tileset*'i aadress.    
+
+```
+			// punktandmed
+			// kui aluskaart on laadinud, siis...
 			map.on('load', () =>{
 			
-				map.addSource('asustusyksused', {
-					type: 'vector',
-					url: 'mapbox://mpilvik.ckwgcrp5q0hwu29qhv8vo5gzy-54t9r'
+				// määra punktandmete allikas (nimetame selle nimega "filmid")
+				map.addSource('filmid', {
+					type: 'vector', // andmetüüp on vektorandmed
+					url: 'mapbox://sinukasutaja.tilesetiaadress' // mapboxi tileseti aadress
 				});
 				
-				
+				// lisa aluskaardi peale määratud allikast (punkti)kiht
 				map.addLayer({
-					'id': 'asustusandmed',
-					'type': 'circle',
-					'source': 'asustusyksused',
-					'source-layer': 'tartumaa_asustus',
+					'id': 'eesti_filmid', // nimetame kihi nimega "eesti_filmid"
+					'type': 'circle', // andmetüüp on (täitevärviga) punkt
+					'source': 'filmid', // andmete allikas on eelnevalt loodud objekt "filmid"
+					'source-layer': 'efis_eesti', // geojsoni kihi enda nimi on "efis_eesti"
 					'paint': {
-						'circle-color': '#ff69b4'
+						'circle-color': '#f3a6b2', // punktide värv roosa
+						'circle-stroke-color': 'transparent', // punktide äärejoon läbipaistev
+						'circle-opacity': 0.4, // punktide väljapaistvus 0.4
+						'circle-radius': { // punkti suuruse võtame
+							property: 'n', // andmestiku tunnusest "n"
+							stops: [[1, 8], [10, 36]] // kui n = 1, siis on punkti suurus 8, kui n = 10, siis 36, teised jäävad ühtlaselt nende vahepeale
+						}
+					}
+				});
+			});
+```  
+
+Lõpetuseks tuleks teha ka midagi selleks, et liugur kaardil toimuvaga kuidagi seotud oleks. Lisame skriptiosa lõppu, `map.on('load', ...` jaotise sisse niisiis veel mõned read koodi. 
+
+Kood küsib veebilehelt, mida kasutaja liuguri väärtuseks on määranud, ning filtreerib näidatavalt punktikihilt välja ainult vastava aastaarvuga read. Samuti muudab skript *parasjagu_aasta* väärtust rakenduse kirjelduses.  
+
+```
+				// muuda kaarti ja aasta loendurit vastavalt liuguri liigutamisele
+				document.getElementById('liugur').addEventListener('input', (e) => {
+					const kasutaja_aasta = parseInt(e.target.value); // võta kasutaja sisend (= aastaarv liugurilt) ja salvesta see objekti "kasutaja_aasta"
+					
+					// muuda kaarti: 
+					// määra kihile "eesti_filmid" filter, millega
+					// filtreerid kogu andmestikust välja ainult need read, kus
+					// tulbas "aasta1" on sama väärtus, mis objektil "kasutaja_aasta"
+					map.setFilter('eesti_filmid', ['==', ['number', ['get', 'aasta1']], kasutaja_aasta]);
+
+					 // muuda aasta loendurit kirjelduses:
+					 // määra HTML-is elemendile id-ga "parasjagu_aasta" sama väärtus, mille kasutaja liuguril valib
+					document.getElementById('parasjagu_aasta').innerText = kasutaja_aasta;
+				});
+```
+
+Terve veebilehe kood näeb nüüd välja niisiis järgmine:
+
+```
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset = "utf-8"/>
+		<meta name='viewport' content='width=device-width, initial-scale=1' />
+		<title>Kohad Eesti filmides</title>
+		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js'></script>
+		<link href='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css' rel='stylesheet' />
+		<style>
+			body { 
+				margin: 0; 
+				padding: 0; 
+				font-family: Helvetica, Arial, sans-serif;
+			}
+			#kaart { 
+				position: absolute; 
+				top: 0; 
+				bottom: 0; 
+				width: 100%; 
+			}
+			#kirjeldus {
+				position: absolute;
+				width: 260px;
+				margin: 10px;
+				padding: 10px 20px;
+				background-color: white;
+			}
+			.slider {
+				width: 100%;
+			}
+		</style>
+	</head>
+	<body>
+		<div id = "kaart"></div>
+		<div id = "kirjeldus">
+			<h1>Eesti filmidega seotud kohad aastatel 1921-2021</h1>
+			<p>Andmed: efis.ee</p>
+			<div>
+				<h2>Aasta: <label id="parasjagu_aasta">1921</label></h2>
+				<input id="liugur" class="slider" type="range" min="1921" max="2021" value="1921" />
+			</div>
+		</div>
+		
+		<script>
+			// aluskaart
+			mapboxgl.accessToken = 'pk.sinukaardistiilijuurdepääsuluba'; // kaardistiili juurdepääsuluba
+
+			const map = new mapboxgl.Map({
+			  container: 'kaart', // millises html-i jaotises kaarti hoida?
+			  style: 'mapbox://styles/sinukasutaja/stiiliaadress', // mapboxi kaardistiili aadress
+			  center: [24.89, 58.64], // aluskaardi keskpunkti koordinaadid
+			  zoom: 6.5 // sissesuumimise tase
+			});
+			
+			// punktandmed
+			// kui aluskaart on laadinud, siis...
+			map.on('load', () =>{
+			
+				// määra punktandmete allikas (nimetame selle nimega "filmid")
+				map.addSource('filmid', {
+					type: 'vector', // andmetüüp on vektorandmed
+					url: 'mapbox://sinukasutaja.tilesetiaadress' // mapboxi tileseti aadress
+				});
+				
+				// lisa aluskaardi peale määratud allikast (punkti)kiht
+				map.addLayer({
+					'id': 'eesti_filmid', // nimetame kihi nimega "eesti_filmid"
+					'type': 'circle', // andmetüüp on (täitevärviga) punkt
+					'source': 'filmid', // andmete allikas on eelnevalt loodud objekt "filmid"
+					'source-layer': 'efis_eesti', // geojsoni kihi enda nimi on "efis_eesti"
+					'paint': {
+						'circle-color': '#f3a6b2', // punktide värv roosa
+						'circle-stroke-color': 'transparent', // punktide äärejoon läbipaistev
+						'circle-opacity': 0.4, // punktide väljapaistvus 0.4
+						'circle-radius': { // punkti suurus võta
+							property: 'n', // andmestiku tunnusest "n"
+							stops: [[1, 8], [10, 36]] // kui n = 1, siis on punkti suurus 8, kui n = 10, siis 36, teised jäävad ühtlaselt nende vahepeale
+						}
 					}
 				});
 				
-				document.getElementById('slider').addEventListener('input', (e) => {
-					const aasta = parseInt(e.target.value);
-					map.setFilter('asustusandmed', ['==', ['number', ['get', 'esmamainimine']], aasta]);
-					if(aasta == 2021){ 
-						map.setFilter('asustusandmed', null);
-					};
+				// muuta kaarti ja aasta loendurit vastavalt liuguri liigutamisele
+				document.getElementById('liugur').addEventListener('input', (e) => {
+					const kasutaja_aasta = parseInt(e.target.value); // võta kasutaja sisend (= aastaarv liugurilt) ja salvesta see objekti "kasutaja_aasta"
 					
-					document.getElementById('year').innerText = aasta;
+					// muuda kaarti: 
+					// määra kihile "eesti_filmid" filter, millega
+					// filtreerid kogu andmestikust välja ainult need read, kus
+					// tulbas "aasta1" on sama väärtus, mis objektil "kasutaja_aasta"
+					map.setFilter('eesti_filmid', ['==', ['number', ['get', 'aasta1']], kasutaja_aasta]);
+
+					 // muuda aasta loendurit kirjelduses:
+					 // määra HTML-is elemendile id-ga "parasjagu_aasta" sama väärtus, mille kasutaja liuguril valib
+					document.getElementById('parasjagu_aasta').innerText = kasutaja_aasta;
 				});
-			
 			});
 		</script>
+	</body>
+</html>
 ```
+
+Salvestame veebilehe nimega **index.html** ja paneme selle üles GitHubi.  
+
 
 ## Lisa
 
